# msb-extractor

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  run.bat  run.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
captures/: .gitignore
docs/: faq.md  privacy.md  reading-your-spreadsheet.md  terms-of-use.md  troubleshooting.md
docs/dev/: scraper-roadmap.md
docs/examples/: README.md  demo_training_log.xlsx  generate_demo.py
scraper/: README.md  bookmarklet.html  msb-scraper.js
src/msb_extractor/: __init__.py  __main__.py  cli.py  models.py
src/msb_extractor/export/: __init__.py  _charts.py  _flat.py  _progress.py  _styles.py  _weekly.py  xlsx.py  xlsx_flat.py
src/msb_extractor/normalize/: __init__.py  exercise.py  program.py  units.py
src/msb_extractor/parser/: __init__.py  api.py  calendar.py  capture.py  day_detail.py
tests/: conftest.py  test_export_xlsx.py  test_merge_captures.py  test_normalize.py  test_parser_api.py  test_parser_calendar.py  test_parser_capture.py  test_parser_day_detail.py  test_parser_set_text.py
tests/fixtures/: calendar_sample.html  day_detail_sample.html
tools/: merge_captures.py
